# fast_api

./: main.py  pyproject.toml
