[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["yo-itz <yoitsu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
